import com.github.jk1.license.filter.LicenseBundleNormalizer
import com.github.jk1.license.render.InventoryHtmlReportRenderer
import com.github.jk1.license.render.JsonReportRenderer

plugins {
  alias(libs.plugins.formkiq.java.base)
  alias(libs.plugins.undercouch.download)
  alias(libs.plugins.license.report)
}

repositories { mavenCentral() }

allprojects {

  version = '1.19.2'

  plugins.withType(JavaPlugin).configureEach {
    java {
      toolchain {
        languageVersion = JavaLanguageVersion.of(25)
      }
    }
  }

  group = 'com.formkiq.stacks'

  configurations.all {
    resolutionStrategy {
      cacheChangingModulesFor 0, 'seconds'
    }
  }

  licenseReport {
    configurations = ['runtimeClasspath']

    outputDir = "$rootDir/docs/licenses"

    renderers = [
      new JsonReportRenderer('licenses.json'),
      new InventoryHtmlReportRenderer('index.html', 'FormKiQ Core')
    ]
    filters = [
      new LicenseBundleNormalizer()
    ]
  }
}

subprojects {
  tasks.withType(Test).configureEach {
    systemProperties['testregion'] = project.getProperty('testregion')
    systemProperties['testprofile'] = project.getProperty('testprofile')
    systemProperties['testappenvironment'] = project.getProperty('testappenvironment')
    systemProperties['testchatgptapikey'] = project.getProperty('testchatgptapikey')
  }
}

description = "FormKiQ Core"

tasks.named('distZip') {
  group = 'distribution'
  description = 'Builds the AWS Cloud distribution package.'
  dependsOn ':packaging:aws-cloud:distZip'
  enabled = false
}

tasks.named('distTar') {
  enabled = false
}

tasks.register('assembleAwsCloud') {
  group = 'build'
  description = 'Assembles the AWS Cloud distribution package.'
  dependsOn ':packaging:aws-cloud:distZip'
}

tasks.register('assembleNettyServer') {
  group = 'build'
  description = 'Assembles the Netty server Docker distribution package.'
  dependsOn ':apps:netty-server:distZip'
}

tasks.register('composeBuildNettyServer') {
  group = 'build'
  description = 'Builds the Netty server Docker images.'
  dependsOn ':apps:netty-server:composeBuild'
}

tasks.register('copyDocsOpenApi') {
  group = 'build'
  description = 'Copy OpenAPI specs into docs folder.'
  dependsOn ':packaging:openapi:copyDocsOpenApi'
}

tasks.register('validateOpenApiSpecs') {
  group = 'verification'
  description = 'Validate generated OpenAPI specs.'
  dependsOn ':packaging:openapi:validateOpenApiSpecs'
}

tasks.named('check') {
  dependsOn tasks.named('validateOpenApiSpecs')
}
